# rdl-tray

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
resources/: app.manifest  app.rc
src/: client.rs  clipboard.rs  config.rs  error.rs  main.rs  notify.rs  tray.rs
tests/: integration.rs
