[package]
name = "rdl-tray"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "System tray companion for remote-dl — clipboard URL watcher with toast notifications"
authors = ["GHSFS"]
license = "MIT"
repository = "https://github.com/GHSFS/rdl-tray"
readme = "README.md"
keywords = ["tray", "clipboard", "windows", "download"]
categories = ["gui"]

[[bin]]
name = "rdl-tray"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
thiserror = "1"
anyhow = "1"
url = "2.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
embed-resource = "2.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
